--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>NovaBoard</title>
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -30,6 +30,6 @@
 	</div>
 </div>		
 
-<script scr="/js/script.js"></script>
+<script scr="js/script.js"></script>
 </body>
 </html>
